--- a/package.json
+++ b/package.json
@@ -20,15 +20,21 @@
   },
   "devDependencies": {
     "@antfu/eslint-config-vue": "^0.27.0",
+    "@iconify/vue": "^4.0.0",
     "@vitejs/plugin-vue": "^3.2.0",
     "eslint": "^8.26.0",
     "eslint-plugin-tailwindcss": "^3.6.2",
     "eslint-plugin-vue": "^9.7.0",
     "nuxt": "3.0.0-rc.12",
+    "sass": "^1.55.0",
     "unplugin-auto-import": "^0.11.4",
     "unplugin-vue-components": "^0.22.9"
   },
   "lint-staged": {
     "*{.js,.ts,.vue}": "eslint --fix ."
+  },
+  "dependencies": {
+    "@duskmoon/vue3-typed-js": "^0.0.2",
+    "vue-remix-icons": "^2.0.3"
   }
 }
